[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymle"
version = "0.1.0"
description = "Python Machine Learning Experiments"
readme = "README.md"
authors = [
    {name = "Paolo", email = "paolo@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
